# compress

./: Cargo.toml
.github/workflows/: rust.yml
proto/: service.proto
src/: main.rs  test.rs  txt
test/: pyproject.toml  readme.md  service_pb2.py  service_pb2_grpc.py  test.py
