[package]
name = "compress"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "compress"
path = "src/lib.rs"

[dev-dependencies]
# 添加测试所需的依赖库
testing-framework = "1.2.3"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sevenz-rust = "0.6.1"
compress-tools = "0.15.1"

[build-dependencies]
tonic-build = "0.10"
